# rust-mdbg

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  dmel_chr4.paf  read50x.gfa  read50x.sequences  read50x_err.gfa  read50x_err.sequences  read50x_errcorr.gfa  read50x_errcorr.sequences  read50x_lev.gfa  read50x_lev.sequences  reads-0.05.h5  run_canu_clr  run_canu_hifi  run_canu_hifi_counts  run_dmel_chr4  run_dmel_chr4 copy  run_dmel_chr4_0.1  run_hg002_counts  run_perfect  rust-unmangle
experiments/: make_table.py  run_canu_hifi  run_canu_hifi_counts  run_dmel  run_dmel_chr4  run_frog_grid  run_hg002  run_hg002_counts  run_mouse  run_mouse_grid  run_perfect  run_strawberry  run_strawberry_grid
experiments/661k_genomes/: component_graphml_to_gfa.py  extract_subset_wcc.sh  get_genomes_ids.py  graph_commands  parse_graph_hits.py  retrieve_wcc_genomes.sh  scan_genomes_minmers.py  separate_components.py  separate_components.sh
experiments/661k_genomes/999_largest_components/: README
experiments/amr/: CMD  amr_targets.covered.txt  fasta_removeiupac.sh  fasta_toupper.sh  parse_hits.py
src/: .gfa_output.rs.swp  banded.rs  buckets.rs  cluster.rs  counter.rs  defs.rs  ec_reads.rs  gfa_output.rs  kmer_generic_array.rs  kmer_vec.rs  main.rs  median.rs  minimizers.rs  pairwise.rs  poa.rs  poa_mod.rs  poa_new.rs  presimp.rs  read.rs  read_stats.rs  seq_output.rs  sparse.rs  to_basespace.rs  utils.rs
utils/: compare_kmers.py  complete_gfa.py  evaluate_ec.py  evaluate_poa.py  extreme_gfaview  gfa2fasta.sh  gfa_break_loops.py  gfa_break_self_loops.py  gfa_strip_sequences  magic_simplify  magic_simplify_meta  mappability.py  minimizer_ball_experiments.py  multik  output_basic_sequences.py  parse_gfa.py  parse_sequences_file.py  recovery_grid.py  ref_assisted_ec.py  remove_homopoly.py  retrace_minimizers.py  retrace_sequences.py  sequences_file_to_fasta.py  simplify
