[package]
name = "rust-mhdbg"
version = "0.1.0"
authors = ["rayan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
fasthash = "0.4.0"
petgraph = "0.4.13"
petgraph-graphml = "1.0.2"
adler32 = "1.0.3"
pbr = "1.0.1" #progressbar
arrayvec = "0.4.10"
#generic-array = "0.13.2" #activate if using kmer_array
#typenum = "1.11.2"
structopt = "0.3.1"
itertools = "0.8.0"
strsim = "0.9.2"
rust-spoa = "*"
array_tool = "*"
threadpool = "*"
rayon = "*"
crossbeam-utils = "*"
fxhash = "*"
nthash = "*"
sourmash = "*"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
closure = "0.3.0"
editdistancewf = "0.1.0"
libc = "0.2.77"

[profile.dev]
opt-level = 3
