[package]
name = "rust-mdbg"
version = "1.0.1"
authors = ["ekimb, rayan"]
edition = "2018"
default-run = "rust-mdbg"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
petgraph = "0.4.13"
petgraph-graphml = "1.0.2"
adler32 = "1.0.3"
pbr = "1.0.1" #progressbar
arrayvec = "0.4.10"
#generic-array = "0.13.2" #activate if using kmer_array
#typenum = "1.11.2"
structopt = "0.3.1"
itertools = "0.8.0"
strsim = "0.9.2"
array_tool = "*"
threadpool = "*"
rayon = "*"
crossbeam-utils = "*"
nthash = "*"
rand_pcg = "0.2.1"
rand_core = "0.5.1"
closure = "0.3.0"
editdistancewf = "0.1.0"
libc = "0.2.77"
bio-types = "0.7.0" # for my reimplementation of needleman-wunsch, bio_types is called by bio too
#seq_io= { path = "./seq_io" }
#seq_io= { git = "https://github.com/markschl/seq_io" }  #currently incompatible
seq_io = "0.4.0-alpha.0"
lzzzz = "0.7"
xx-bloomfilter = "0.10.0"
flate2 = "1.0.6"
glob = "0.3.0"
dashmap = "3.11.10"
thread-id = "3.3.0"

[profile.dev]
opt-level = 3


[[bin]]
name = "to_basespace"
path = "src/to_basespace.rs"
